src/style.css
/* ... */
.mv-add-tag,
.mv-add-task,
.mv-add-card,
.mv-add-list {
    @apply ml-1 px-2 py-1 rounded text-blue-100 bg-blue-600;

    &:hover {
        @apply bg-blue-500;
    }

    &::before {
        content: "+";
        @apply mr-1;
    }
}

.mv-add-tag {
    @apply text-xs;
}

.mv-add-task {
    @apply mt-2;
    @apply text-sm;
}

.mv-add-list {
    align-self: start;
    justify-self: start;

    @apply ml-3 mt-6 text-teal-100 bg-teal-600;

    &:hover {
        @apply bg-teal-500;
    }
}

